--- a/Tarjeta1.css
+++ b/Tarjeta1.css
@@ -1,18 +1,28 @@
 body {
     background: #333;
-    padding-top: 150px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Altura completa de la pantalla */
+    overflow: hidden;
 }
 
 .card-container {
     font-family: 'Open Sans', sans-serif;
     font-size: 8vw; /* Tamaño de fuente relativo */
     font-weight: bold;
-    width: 90%; /* Ancho relativo */
-    max-width: 1200px; /* Ancho máximo */
-    height: auto; /* Altura automática */
-    margin: 80px auto;
+    width: 100vw; /* Ancho completo de la pantalla */
+    height: 100vh; /* Altura completa de la pantalla */
+    margin: 0; /* Quitar márgenes */
     border-radius: 10px;
     perspective: 1400px;
+    padding: 20px; /* Añadir padding para crear espacio interno */
+    box-sizing: border-box; /* Incluir padding en el tamaño total */
+    display: flex;
+    justify-content: center; /* Centrar contenido horizontalmente */
+    align-items: center; /* Centrar contenido verticalmente */
 }
 
 .card {
@@ -52,7 +62,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center; /* Centra los regalos horizontalmente */
-    align-items: flex-start; /* Alinea los regalos en la parte superior */
+    align-items: center; /* Centra los regalos verticalmente */
     gap: 20px; /* Espacio entre los regalos */
 }
 
@@ -148,7 +158,6 @@ body {
 @media (max-width: 600px) {
     .card-container {
         font-size: 20px; /* Ajuste de tamaño de fuente en pantallas pequeñas */
-        margin: 40px auto; /* Ajuste de margen */
     }
 
     .front .container {
